--- a/WebApplication5/Views/Answer/_AnswerUpdate.cshtml
+++ b/WebApplication5/Views/Answer/_AnswerUpdate.cshtml
@@ -3,50 +3,48 @@
 @* partial view in QuestionAnswer *@
 
 
-<div class="modal fade" id="updateAnswerModal" tabindex="-1" role="dialog" aria-labelledby="updateAnswerModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="updateAnswerModalLabel">Edit Answer</h5>
-            </div>
-            <div class="modal-content">
-                <div class="content-section mt-2">
-                    <h3>Edit answer</h3>
-                    <form id="form" asp-controller="Answer" asp-action="AnswerUpdate" onsubmit="handleAnswerUpdateSubmit()">
-                        @Html.AntiForgeryToken()
+<div class="modal" id="answer-update-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+            <h2 class="modal-card-title">Edit Answer</h2>
+            <button class="delete cancel-modal-trigger" data-target="#answer-update-modal" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+            <div class="content-section mt-2">
+                <form id="form" asp-controller="Answer" asp-action="AnswerUpdate" onsubmit="handleAnswerUpdateSubmit()">
+                    @Html.AntiForgeryToken()
 
-                        <div class="form-group">
-                            <label for="editor">Content</label>
-                            <div id="update-editor" class="form-control">@Html.Raw(Model.Content)</div>
-                            <input type="hidden" id="quill-answer-update-content" asp-for="@Model.Content" />
-                        </div>
+                    <div class="form-group">
+                        <label for="editor">Content</label>
+                        <div id="update-answer-editor" class="form-control">@Html.Raw(Model.OriginalAnswer.Content)</div>
+                        <input type="hidden" id="quill-update-answer-content" asp-for="@Model.Content" />
+                    </div>
 
-                        <div class="form-group">
-                            <input type="submit" name="submit" class="btn btn-outline-info" value="Update Answer" />
-                        </div>
-                    </form>
-                </div>
+                    <div class="form-group">
+                        <input type="submit" name="submit" class="button" value="Update Answer" />
+                    </div>
+                </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
+        </section>
     </div>
 </div>
 
-<script>
-    var answerUpdateQuill = new Quill('#update-editor', {
-        modules: {
-        toolbar: [
-            [{ header: [1, 2, false] }],
-            ['bold', 'italic', 'underline'],
-            ['image', 'code-block']
-        ]
-        },
-        theme: 'snow'
-    });
+@section Scripts {
+    <script>
+        var answerUpdateQuill = new Quill('#update-answer-editor', {
+            modules: {
+                toolbar: [
+                    [{ header: [1, 2, false] }],
+                    ['bold', 'italic', 'underline'],
+                    ['image', 'code-block']
+                ]
+            },
+            theme: 'snow'
+        });
 
-    function handleAnswerUpdateSubmit() {
-        document.getElementById('quill-answer-update-content').value = JSON.stringify(answerUpdateQuill.getContents());
-    }
-</script>
+        function handleAnswerUpdateSubmit() {
+            document.getElementById('quill-update-answer-content').value = JSON.stringify(answerUpdateQuill.getContents());
+        }
+    </script>
+}
