--- a/WebApplication5/Views/Shared/_DeleteModal.cshtml
+++ b/WebApplication5/Views/Shared/_DeleteModal.cshtml
@@ -1,21 +1,21 @@
 ﻿@model WebApplication5.ViewModels.Shared.DeleteModalViewModel
 
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Delete @Model.DomainName?</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+
+<div class="modal" id="delete-modal-@Model.DomainName">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+            <h2 class="modal-card-title">Delete @Model.DomainName?</h2>
+            <button class="delete cancel-modal-trigger" data-target="#answer-update-modal" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+            <div class="content-section mt-2">
+                <form id="form" asp-controller="@Model.Controller" asp-action="@Model.Action">
+                    @Html.AntiForgeryToken()
+
+                    <input type="submit" name="submit" class="button is-danger" value="Delete" />
+                </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                @using (Html.BeginForm(Model.Action, Model.Controller, FormMethod.Post))
-                {
-                    <input class="btn btn-danger" type="submit" value="Delete"/>
-                }
-            </div>
-        </div>
+        </section>
     </div>
 </div>
