--- a/WebApplication5/Views/Profile/Login.cshtml
+++ b/WebApplication5/Views/Profile/Login.cshtml
@@ -1,34 +1,34 @@
-﻿@model WebApplication5.ViewModels.User.LoginViewModel
+﻿@using WebApplication5.ViewModels.User
+@model LoginViewModel
 
 
-<div class="content-section ml-auto mr-auto mt-3">
-    <img class="large-logo ml-auto mr-auto" src="~/web-logo.png"/>
-    <h1><b>Login</b></h1>
-    @using (Html.BeginForm("Login", "User", FormMethod.Post, new { @autocomplete = "off" }))
-    {
+<div class="content-section box ml-auto mr-auto mt-6 is-justify-content-center" style="width: 50%">
+    <h1 class="title is-3">Login</h1>
+    <form asp-controller="Profile" asp-action="Login">
         @Html.AntiForgeryToken()
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, "Email")
-            @Html.TextBoxFor(m => m.Email, "", new { @class = "form-control form-control-lg", 
-                @type = "text", @placeholder = "Email" 
-            })
+
+        <div class="field">
+            <label class="label" for="email">Email</label>
+            <div class="control">
+                <input class="input" type="text" name="email" asp-for="Email"/>
+            </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, "Password")
-            @Html.TextBoxFor(m => m.Password, "", new { @class = "form-control form-control-lg", 
-                @type = "text", @placeholder = "Password" 
-            })
+        <div class="field">
+            <label class="label" for="Password">Password</label>
+            <div class="control">
+                <input class="input" type="text" name="Password" asp-for="Password" />
+            </div>
         </div>
 
-        <div class="form-group m-auto">
-            <input type="submit" name="submit" class="btn btn-outline-info" value="Login" />
+        <div class="field is-grouped">
+            <div class="control">
+                <input type="submit" name="submit" class="button is-link" value="Login" />
+            </div>
         </div>
-    }
+    </form>
 
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Don't have an account? @Html.ActionLink("Sign in here", "Register", "User", htmlAttributes: new { @class="ml-2" })
-        </small>
-    </div>
+    <small class="text-muted">
+        Don't have an account? @Html.ActionLink("Sign up here", "Register", "Profile", htmlAttributes: new { @class="ml-2" })
+    </small>
 </div>
