style questionupdate view

--- a/WebApplication5/Views/Question/QuestionUpdate.cshtml
+++ b/WebApplication5/Views/Question/QuestionUpdate.cshtml
@@ -1,45 +1,61 @@
 ﻿@using WebApplication5.ViewModels.QuestionAndAnswer
 @model QuestionUpdateViewModel
 
-<h1>Edit question</h1>
-
 
 @section Head {
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 }
 
-<div class="content-section ml-auto mr-auto mt-3">
-    <form id="form" asp-controller="Question" asp-action="QuestionCreate" onsubmit="handleQuestionSubmit()">
+
+<h1 class="title is-1 mt-2">Edit your question</h1>
+
+<div class="content-section box ml-auto mr-auto mt-1">
+    <form id="form" asp-controller="Question" asp-action="QuestionUpdate" onsubmit="handleQuestionSubmit()">
         @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input class="form-control form-control-lg" type="text" placeholder="Title" value="@Model.Title" />
-        </div>
-
-        <div class="form-group">
-            <label for="editor">Content</label>
-            <div id="editor" class="form-control">
-                @Html.Raw(Model.Content)
+        <div class="field">
+            <label class="label" for="title">Title</label>
+            <div class="control">
+                <input class="input" type="text" placeholder="Title" value="@Model.OriginalQuestion.Title" asp-for="@Model.Title" />
             </div>
-            <input type="hidden" id="quill-question-content" asp-for="@Model.Content" />
         </div>
 
-        <div class="form-group">
-            <label for="TagQuery">Tags</label>
-            <input class="dropdown-item" name="tagify" id="TagQuery" value="@Model.TagStr" autofocus>
+        <div class="field">
+            <label class="label">Content</label>
+            <div class="control">
+                <div id="editor" class="content">@Html.Raw(Model.OriginalQuestion.Content)</div>
+                <input type="hidden" id="quill-question-content" asp-for="@Model.Content" />
+                <input type="hidden" id="quill-question-truncated-content" asp-for="@Model.TruncatedContent" />
+            </div>
+        </div>
+
+        <div class="field">
+            <label for="TagQuery" class="label">Tags</label>
+
+            <div class="control">
+                <select multiple data-type="tags" id="TagQuery" data-placeholder="Choose up to 5 tags">
+                    @foreach (var tag in @Model.OriginalQuestion.Tags)
+                    {
+                        <option value="@tag.Title">@tag.Title</option>
+                    }
+                </select>
+            </div>
             <input type="hidden" id="tags" asp-for="@Model.Tags" />
         </div>
 
-        <div class="form-group">
-            <input type="submit" name="submit" class="btn btn-outline-info" value="Submit Question" />
+        <div class="field is-grouped">
+            <div class="control">
+                <input type="submit" name="submit" class="button is-link" value="Submit Question" />
+            </div>
         </div>
     </form>
 </div>
 
+
 @section Scripts {
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@@yaireo/tagify"></script>
+    @* <script src="https://cdn.jsdelivr.net/npm/@@yaireo/tagify"></script> *@
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@@creativebulma/bulma-tagsinput/dist/js/bulma-tagsinput.min.js"></script>
     <script>
         var questionQuill = new Quill('#editor', {
             modules: {
@@ -54,20 +70,12 @@
 
         function handleQuestionSubmit() {
             document.getElementById('quill-question-content').value = JSON.stringify(questionQuill.getContents());
+            document.getElementById('quill-question-truncated-content').value = questionQuill.getText().slice(0, 167) + "...";
             document.getElementById('tags').value = JSON.stringify(tagify.value);
         }
 
-        var tagInput = document.getElementById('input[name=tagify]');
+        var tagInput = document.getElementById('TagQuery');
 
-        // initialize Tagify for tag input
-        var tagify = new Tagify(tagInput);
-        tagify.settings.validate = (tagData) => {
-            if (tagData.value.length > 5) {
-                return "Please enter at most 5 tags.";
-            }
-            else {
-                return true;
-            }
-        }
+        new BulmaTagsInput(tagInput);
     </script>
 }
