make error pages

--- a/WebApplication5/Views/Error/ServerError.cshtml
+++ b/WebApplication5/Views/Error/ServerError.cshtml
@@ -1,15 +1,12 @@
-﻿
-<head>
+﻿<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo&family=Lemonada:wght@300&display=swap" rel="stylesheet">
 </head>
 
-
 <div class="columns">
 	<div style="height: 95vh; width: 50vw" class="column">
-		<h1 class="title">404</h1>
-		<p class="subtitle">It might have been moved or deleted.</p>
+		<h1 class="title">500</h1>
+		<p class="subtitle">Try again later.</p>
 	</div>
 </div>
-
