--- a/WebApplication5/Views/Error/Forbidden.cshtml
+++ b/WebApplication5/Views/Error/Forbidden.cshtml
@@ -1,15 +1,17 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo&family=Lemonada:wght@300&display=swap" rel="stylesheet">
 </head>
 
-
 <div class="columns">
 	<div style="height: 95vh; width: 50vw" class="column">
-		<h1 class="title">404</h1>
-		<p class="subtitle">It might have been moved or deleted.</p>
+		<h1 class="subtitle is-1">403</h1>
+		<p class="subtitle">You aren't allowed to perform that action.</p>
 	</div>
 </div>
 
+</html>
